<resources>
    <string name="app_name">App_de_chat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login">Iniciar sesión</string>
    <string name="register">Registrarse</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="go_to_register">Crear cuenta</string>
    <string name="go_to_login">Ya tengo cuenta</string>
    <string name="login_success">Sesión iniciada</string>
    <string name="login_failed">Usuario o contraseña incorrectos</string>
    <string name="register_success">Registro exitoso</string>
    <string name="error_empty_fields">Completa todos los campos</string>
    <string name="error_no_user_registered">No hay usuario registrado, regístrate primero</string>
    <string name="action_logout">Cerrar sesión</string>
    <string name="logout">Logout</string>
    <string name="escribe_tu_mensaje_aqui">Escribe tu mensaje aqui...</string>
</resources>